--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
     <div class="container">
         <img src="images/avraQ.png" class="logo" alt="">
         <div class="content">
-            <p>Nigeria's First Blockchain Oracle Solution is Coming soon !!!</p>
-            <h1>We're <span>Launcing</span> Soon</h1>
+            <p>Nigeria's First Blockchain Solution to the Oracle Problem is Coming soon !!!</p>
+            <h1>We're <span>Launching</span> Soon</h1>
             <div class="launch-time">
                 <div>
                     <p id="days">00</p>
