--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
     <div class="container">
         <img src="images/avraQ.png" class="logo" alt="">
         <div class="content">
-            <p>Nigeria's First Blockchain Solution to the Oracle Problem is Coming soon !!!</p>
-            <h1>We're <span>Launching</span> Soon</h1>
+            <p>Nigeria's First Blockchain Oracle Solution is Coming soon !!!</p>
+            <h1>We're <span>Launcing</span> Soon</h1>
             <div class="launch-time">
                 <div>
                     <p id="days">00</p>
@@ -48,11 +48,11 @@
         <img src="images/rotate-block.png" class="rocket" alt="">
 
         <div class="footer">
-            <p> <em id="date">&copy;</em> 2023 AvraQ</p>
+            <em id="date" style="margin: 0 1%;">&copy;</em> <span>2023 AvraQ</span>
         </div>
 
         <script>
-            var countDownDate = new Date("Jan 23, 2023 00:00:00").getTime()
+            var countDownDate = new Date("Jan 30, 2023 00:00:00").getTime()
             var x = setInterval(function () {
                 var now = new Date().getTime();
                 var distance = countDownDate - now;
